# home-ops

./: .bazelrc  .gitignore  .yamllint  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  renovate.json  shell.nix
.github/: dependabot.yml  labeler.yaml  labels.yaml  renovate.json
.github/workflows/: argocd-diff.yaml  build.yaml  kubeconform.yaml  label-sync.yaml  labeler.yaml  publish.yaml  yamllint.yaml
ansible/: README.md  ansible.cfg  hosts  propagate_ssh_pub.yml  run_ansible_env.sh  shell.nix  update_known_hosts.yml
bazel/bazelrc/: bes.bazelrc  common.bazelrc  performance.bazelrc  rbe.bazelrc  remote-execution.bazelrc
bazel/patches/github.com-bazel-contrib-rules_distroless/: 0001-patch-scripts-sheabangs.patch  0002-patch-override-mktemp-default-tempdir.patch  BUILD.bazel
bazel/patches/github.com-bazel-contrib-rules_oci/: 0001-patch-scripts-sheabangs.patch  BUILD.bazel
bazel/rules/rules_packer/: BUILD  build-runner.sh.tpl  init-runner.sh.tpl  packer.bzl
bootstrap/overlays/default/: kustomization.yaml
cluster-home/bootstrap/base/: argocd.Namespace.yaml  kustomization.yaml
cluster-home/components/applications/: code-server-app.yaml  fastapi-mvc-example-app.yaml  kustomization.yaml
cluster-home/components/applicationsets/: core-components-appset.yaml  kustomization.yaml  tenants-appset.yaml
cluster-home/components/argocdproj/: kustomization.yaml
cluster-home/core/cert-manager/: kustomization.yaml
cluster-home/core/certificates/: cert-manager-app.yaml  cert-manager-webhook-ovh-app.yaml  cert-manager-webhook-ovh.Application.yaml  cert-manager.Application.yaml  kustomization.yaml
cluster-home/core/code-server/: kustomization.yaml
cluster-home/core/gha-runner-controller/: application.yaml  kustomization.yaml
cluster-home/core/gitops-controller/: kustomization.yaml
cluster-home/core/ingress-controller/: kustomization.yaml
cluster-home/core/kube-prometheus-stack/: monitoring-app.yaml
cluster-home/core/monitoring/: airgradient-dashboard-configmap.yaml  airgradient-dashboard.json  alert-manager-tls.yaml  alert-manager.Certificate.yaml  grafana-tls.Certificate.yaml  kube-prometheus-stack-app.yaml  kube-prometheus-stack.Application.yaml  kube-prometheus-stack.Namespace.yaml  kustomization.yaml  prometheus-tls.Certificate.yaml
cluster-home/core/operators/: cloudnative-pg.Application.yaml  cloudnative-pg.Namespace.yaml  kustomization.yaml
cluster-home/core/sample-admin-workload/: kustomization.yaml  sample-admin-config.yaml
cluster-home/core/storage/: csi-proxmox-backup-disable.VolumeAttributesClass.yaml  csi-proxmox-backup-enable.VolumeAttributesClass.yaml  csi-proxmox.Application.yaml  csi-proxmox.Namespace.yaml  democratic-csi-iscsi-application.yaml  democratic-csi-iscsi-namespace.yaml  democratic-csi-iscsi.Application.yaml  kustomization.yaml
cluster-home/gitops-controller/: kustomization.yaml
cluster-home/gitops-controller/applications/: gitops-controller.Application.yaml  kustomization.yaml
cluster-home/gitops-controller/applicationsets/: core-components.ApplicationSet.yaml  kustomization.yaml  workloads.ApplicationSet.yaml
cluster-home/gitops-controller/init/: kustomization.yaml
cluster-home/gitops-controller/projects/: kustomization.yaml  test-project.AppProject.yaml
cluster-home/tenants/argocd-ingress/: ingress.yaml  kustomization.yaml
cluster-home/tenants/buildbarn/: browser.yaml  frontend.yaml  kustomization.yaml  scheduler.yaml  storage.yaml  tls.yaml  worker-starterkit-ash-coreutils-x86_64-cc.yaml  worker-starterkit-ash-x86_64-cc.yaml  worker-ubuntu22-04.yaml
cluster-home/tenants/buildbuddy/: bb-application.yaml  bb-ingress.yaml  db-application.yaml  kustomization.yaml
cluster-home/tenants/cloudflared/: cloudflared-deployment.yaml  cloudflared-namespace.yaml  kustomization.yaml
cluster-home/tenants/coder/: coder-db-application.yaml  coder-tls.yaml  coder-v2-application.yaml  kustomization.yaml
cluster-home/tenants/fastapi-mvc-example/: application.yaml  kustomization.yaml  namespace.yaml
cluster-home/tenants/foobar-app/: foobar-app-ns.yaml  foobar-app-service.yaml  kustomization.yaml
cluster-home/tenants/gh-runners/: crds.yaml  kustomization.yaml  nixos-config-runner.yaml
cluster-home/tenants/gha-runner/: controller-application.yaml  home-ops-application.yaml  home-ops-namespace.yaml  kustomization.yaml  nix-pvc.yaml  nixos-config-application.yaml  nixos-config-configmap.yaml  nixos-config-namespace.yaml
cluster-home/tenants/terraform/: kustomization.yaml  terraform-state-sa.yaml
cluster-home/workloads/argocd-ingress/: argocd-server-http.Ingress.yaml  argocd-tls.Certificate.yaml  kustomization.yaml
cluster-home/workloads/buildbarn/: browser.Certificate.yaml  browser.Deployment.yaml  browser.Ingress.yaml  browser.Service.yaml  frontend.Certificate.yaml  frontend.Deployment.yaml  frontend.Ingress.yaml  frontend.Service.yaml  kustomization.yaml  scheduler.Certificate.yaml  scheduler.Deployment.yaml  scheduler.Ingress.yaml  scheduler.Service.yaml  storage.Service.yaml  storage.StatefulSet.yaml  worker-starterkit-ash-bash-x86_64.Deployment.yaml  (+6 more)
docs/: proxmox.md  truenas.md
docs/procedures/: renaming-proxmox.md  update_talos_linux.md
images/actions-runner/: BUILD.bazel  apt.lock.json  apt.yaml
images/cgit/: BUILD.bazel  apt.lock.json  apt.yaml  cgitrc  nginx.conf  supervisord.conf
images/common/: BUILD.bazel  variables.bzl
manifests/nfs_storage/: deployment.yml
manifests/stocker/: create_backtest_job.sh
packer/nixos-node/: BUILD.bazel  nixos-node.pkr.hcl  secrets.auto.pkrvars.hcl.age  variables.pkr.hcl
packer/proxmox-talos-node/: BUILD  Makefile  README.md  secrets.auto.pkrvars.hcl.age  talos-node.pkr.hcl  variables.pkr.hcl
scripts/: get_sa_config.sh
tenants/foobar-app/: foobar-app-deployment.yaml
terraform/coder/k8s-ubuntu/: BUILD.bazel  data.tf  main.tf  startup.sh  versions.tf
terraform/ovh/: .terraform.lock.hcl  BUILD.bazel  README.md  auth.tf  dns_records.auto.tfvars  domains.tf  providers.bzl  secrets.auto.tfvars.age  terraform.tf  variables.tf  versions.tf
(+145 files in other folders)
