module(
    name = "home-ops",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

############
# Binaries #
############

# Age binary

http_archive(
    name = "age",
    build_file = "@home-ops//bazel/third_party:age.bazel",
    sha256 = "7df45a6cc87d4da11cc03a539a7470c15b1041ab2b396af088fe9990f7c79d50",
    url = "https://github.com/FiloSottile/age/releases/download/v1.2.1/age-v1.2.1-linux-amd64.tar.gz",
)

# Packer binary

http_archive(
    name = "packer",
    build_file = "@home-ops//bazel/third_party:packer.bazel",
    sha256 = "790183b1febe0f3f919bac22b193dfbba031a6e30a148ecc69816fcc47eec702",
    url = "https://releases.hashicorp.com/packer/1.8.4/packer_1.8.4_linux_386.zip",
)

# Coder binary

http_archive(
    name = "coder",
    build_file = "@home-ops//bazel/third_party:coder.bazel",
    sha256 = "b96de42d073ce3706da31bec48aae6c95d0fe96040361c6443bc43e181a617db",
    url = "https://github.com/coder/coder/releases/download/v2.26.1/coder_2.26.1_linux_amd64.tar.gz",
)

# Bazelisk binary

http_file(
    name = "bazelisk",
    executable = True,
    sha256 = "e1508323f347ad1465a887bc5d2bfb91cffc232d11e8e997b623227c6b32fb76",
    url = "https://github.com/bazelbuild/bazelisk/releases/download/v1.27.0/bazelisk-linux-amd64",
)

# GitHub Actions runner

http_archive(
    name = "runner",
    build_file = "@home-ops//bazel/third_party:runner.bazel",
    sha256 = "af5c33fa94f3cc33b8e97937939136a6b04197e6dadfcfb3b6e33ae1bf41e79a",
    url = "https://github.com/actions/runner/releases/download/v2.330.0/actions-runner-linux-x64-2.330.0.tar.gz",
)

#########
# Rules #
#########

# platforms
bazel_dep(name = "platforms", version = "1.0.0")

# Skylib
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Aspect bazel lib
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")

# rules_shell
bazel_dep(name = "rules_shell", version = "0.6.1")

# rules_pkg
bazel_dep(name = "rules_pkg", version = "1.1.0")

# rules_oci
bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:8c8b7cf2a01e2d1c683128b2488d77139fa90ec8cb807f0ae260d57f7022dedd",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")

# rules_distroless
bazel_dep(name = "rules_distroless", version = "0.6.1")

apt = use_extension(
    "@rules_distroless//apt:extensions.bzl",
    "apt",
)
apt.install(
    name = "ubuntu_jammy",
    # For the initial setup, the lockfile attribute can be omitted and generated by running
    #    bazel run @ubuntu_jammy//:lock
    # This will generate the lock.json file next to the manifest file by replacing `.yaml` with `.lock.json`
    lock = "//images/actions-runner:apt.lock.json",
    manifest = "//images/actions-runner:apt.yaml",
)
use_repo(apt, "ubuntu_jammy")

bazel_dep(name = "gcc_toolchain", version = "0.9.0")
git_override(
    module_name = "gcc_toolchain",
    remote = "https://github.com/f0rmiga/gcc-toolchain",
    commit = "afb8939c503cebc6c6a44d34d091365ebfc8edc3",
)

gcc_toolchains = use_extension(
    "@gcc_toolchain//toolchain:module_extensions.bzl",
    "gcc_toolchains",
    dev_dependency = True,
)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_x86_64",
    target_arch = "x86_64",
)
use_repo(gcc_toolchains, "gcc_toolchain_x86_64")

register_toolchains(
    "@gcc_toolchain_x86_64//:cc_toolchain",
    "@gcc_toolchain_x86_64//:fortran_toolchain",
    dev_dependency = True,
)
