module(
    name = "home-ops",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

############
# Binaries #
############

# Age binary

http_archive(
    name = "age",
    build_file = "@home-ops//bazel/third_party:age.bazel",
    sha256 = "7df45a6cc87d4da11cc03a539a7470c15b1041ab2b396af088fe9990f7c79d50",
    url = "https://github.com/FiloSottile/age/releases/download/v1.2.1/age-v1.2.1-linux-amd64.tar.gz",
)

# Packer binary

http_archive(
    name = "packer",
    build_file = "@home-ops//bazel/third_party:packer.bazel",
    sha256 = "790183b1febe0f3f919bac22b193dfbba031a6e30a148ecc69816fcc47eec702",
    url = "https://releases.hashicorp.com/packer/1.8.4/packer_1.8.4_linux_386.zip",
)

# Coder binary

http_archive(
    name = "coder",
    build_file = "@home-ops//bazel/third_party:coder.bazel",
    sha256 = "b96de42d073ce3706da31bec48aae6c95d0fe96040361c6443bc43e181a617db",
    url = "https://github.com/coder/coder/releases/download/v2.26.1/coder_2.26.1_linux_amd64.tar.gz",
)

# Bazelisk binary

http_file(
    name = "bazelisk",
    executable = True,
    sha256 = "e1508323f347ad1465a887bc5d2bfb91cffc232d11e8e997b623227c6b32fb76",
    url = "https://github.com/bazelbuild/bazelisk/releases/download/v1.27.0/bazelisk-linux-amd64",
)

# GitHub Actions runner

http_archive(
    name = "runner",
    build_file = "@home-ops//bazel/third_party:runner.bazel",
    sha256 = "7ce6b3fd8f879797fcc252c2918a23e14a233413dc6e6ab8e0ba8768b5d54475",
    url = "https://github.com/actions/runner/releases/download/v2.333.0/actions-runner-linux-x64-2.333.0.tar.gz",
)

#########
# Rules #
#########

# platforms
bazel_dep(name = "platforms", version = "1.0.0")

# Skylib
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Aspect bazel lib
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")

# rules_shell
bazel_dep(name = "rules_shell", version = "0.6.1")

# rules_pkg
bazel_dep(name = "rules_pkg", version = "1.1.0")

# rules_oci
bazel_dep(name = "rules_oci", version = "2.3.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:b0510424f0c7c1d6fdae75ef5c1d349fa72d312e96f69728fad6beb04755b8b4",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")

# rules_distroless
bazel_dep(name = "rules_distroless", version = "0.6.2")

apt = use_extension(
    "@rules_distroless//apt:extensions.bzl",
    "apt",
)
apt.install(
    name = "ubuntu_jammy",
    # For the initial setup, the lockfile attribute can be omitted and generated by running
    #    bazel run @ubuntu_jammy//:lock
    # This will generate the lock.json file next to the manifest file by replacing `.yaml` with `.lock.json`
    lock = "//images/actions-runner:apt.lock.json",
    manifest = "//images/actions-runner:apt.yaml",
)
use_repo(apt, "ubuntu_jammy")

bazel_dep(name = "gcc_toolchain", version = "0.9.0")
git_override(
    module_name = "gcc_toolchain",
    remote = "https://github.com/f0rmiga/gcc-toolchain",
    commit = "cd3e7ee1027a3ecc8b89dc61eb485299ed833399",
)

gcc_toolchains = use_extension(
    "@gcc_toolchain//toolchain:module_extensions.bzl",
    "gcc_toolchains",
    dev_dependency = True,
)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_x86_64",
    target_arch = "x86_64",
)
use_repo(gcc_toolchains, "gcc_toolchain_x86_64")

register_toolchains(
    "@gcc_toolchain_x86_64//:cc_toolchain",
    "@gcc_toolchain_x86_64//:fortran_toolchain",
    dev_dependency = True,
)

register_execution_platforms(
    "@home-ops//:x86_64_linux_remote",
    dev_dependency = True,
)

archive_override(
    module_name = "rules_distroless",
    patch_args = ["-p1"],
    patches = [
        "@home-ops//bazel/patches/github.com-bazel-contrib-rules_distroless:0001-patch-scripts-sheabangs.patch",
        "@home-ops//bazel/patches/github.com-bazel-contrib-rules_distroless:0002-patch-override-mktemp-default-tempdir.patch",
    ],
    sha256 = "0e2486fb33280a7534241efb76e76d63f613b7c89a23e6990cb8c937349901f5",
    strip_prefix = "rules_distroless-bd2acda8015d464fa2dd26995617e6ebd9749899",
    url = "https://github.com/rszamszur/rules_distroless/archive/bd2acda8015d464fa2dd26995617e6ebd9749899.tar.gz",
)

archive_override(
    module_name = "rules_oci",
    patch_args = ["-p1"],
    patches = ["@home-ops//bazel/patches/github.com-bazel-contrib-rules_oci:0001-patch-scripts-sheabangs.patch"],
    sha256 = "b8db7ab889d501db33313620b2c8040dbb07e95c26a0fefe06004b35baf80e08",
    strip_prefix = "rules_oci-2.2.7",
    url = "https://github.com/bazel-contrib/rules_oci/releases/download/v2.2.7/rules_oci-v2.2.7.tar.gz",
)
