load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

filegroup(
  name = "srcs",
  srcs = ["startup.sh"] + glob(["**/*.tf"]),
)

pkg_tar(
    name = "srcs_tar",
    srcs = [":srcs"],
)

genrule(
  name = "coder.publish",
  outs = ["k8s-ubuntu.publish.sh"],
  srcs = [":srcs_tar"],
  tags = ["local", "no-cache", "no-remote-cache"],
  executable = True,
  tools = [
    "@coder//:bin"
  ],
  cmd = """
cat > $@ << EOF
#!/usr/bin/env bash
set -euo pipefail
cat $(location :srcs_tar) | ./$(location @coder//:bin) templates push k8s-ubuntu --yes -d - 
EOF
""",
)
